Dodata Bash skripta za proveru integriteta i Python skripta za importovanje podataka u MongoDB.

--- a/frontend/views/main.html
+++ b/frontend/views/main.html
@@ -12,6 +12,7 @@
                 <md-input-container flex="30">
                     <label>Prefiksi</label>
                     <md-select name="favoriteColor" ng-model="favoriteColor">
+                        <md-optgroup label="Prefiksi">
                         <md-option value="red">Prefiks 1</md-option>
                         <md-option value="blue">Prefiks 2</md-option>
                         <md-option value="green">Prefiks 3</md-option>
@@ -58,6 +59,7 @@
                 <md-input-container flex="30">
                     <label>Prefiksi</label>
                     <md-select name="favoriteColor" ng-model="favoriteColor">
+                        <md-optgroup label="Prefiksi">
                         <md-option value="red">Prefiks 1</md-option>
                         <md-option value="blue">Prefiks 2</md-option>
                         <md-option value="green">Prefiks 3</md-option>
