Uradjena funkcionalnost dodavanja i uklanjanja parametara.

--- a/frontend/views/main.html
+++ b/frontend/views/main.html
@@ -8,10 +8,11 @@
         </md-card-title>
 
         <md-card-content>
-            <div layout="row" layout-align="center">
+            <div ng-repeat-start="(key, value) in $root.entries" layout="row" layout-align="center">
+
                 <md-input-container flex="30">
                     <label>Prefiksi</label>
-                    <md-select name="favoriteColor" ng-model="favoriteColor">
+                    <md-select  ng-model="$root.entries[key].prefix">
                         <md-optgroup label="Prefiksi">
                             <!-- Ukoliko postoji vrednost od prefiksa, ona se prikazuje, u suprotnom ime prefiksa se prikazuje. -->
                             <md-option ng-repeat="(name,value) in availablePrefixes" ng-if="value"
@@ -23,22 +24,22 @@
 
                 <md-input-container>
                     <label>Parametar</label>
-                    <input>
+                    <input ng-model="$root.entries[key].parameter">
                 </md-input-container>
 
                 <md-input-container>
-                    <label>Operator</label>
-                    <md-select ng-model="asdf">
-                        <md-option><em>AND</em></md-option>
-                        <md-option><em>OR</em></md-option>
+                    <md-select ng-model="$root.entries[key].operator" placeholder="Operatori">
+                        <md-optgroup label="Operatori">
+                            <md-option value="AND">AND</md-option>
+                            <md-option value="OR">OR</md-option>
                     </md-select>
-
                 </md-input-container>
 
-                <md-button class="small">
+                <md-button class="small" ng-click="removeEntry(key)">
                     <md-icon>clear</md-icon>
                 </md-button>
             </div>
+            <div ng-repeat-end=""></div>
 
             <div layout="row" layout-align="center">
                 <md-button class="md-raised md-primary capitalized">Pretraži</md-button>
