Implementirano slanje parametara ka serveru. (TODO: Isparsirati parametre i napraviti upit sa serverske strane).

--- a/frontend/views/main.html
+++ b/frontend/views/main.html
@@ -42,7 +42,7 @@
             <div ng-repeat-end=""></div>
 
             <div layout="row" layout-align="center">
-                <md-button class="md-raised md-primary capitalized">Pretraži</md-button>
+                <md-button class="md-raised md-primary capitalized" ng-click="sendQuery()">Pretraži</md-button>
                 <md-button class="md-primary capitalized">Istorija pretrage</md-button>
 
             </div>
