--- a/frontend/stylesheets/css.css
+++ b/frontend/stylesheets/css.css
@@ -9,3 +9,19 @@
     height: 35px;
     width: 35px;
 }
+
+#pre_text {
+    height: auto;
+    width: 400px;
+    max-height: 600px;
+    max-width: 700px;
+    min-height: 400px;
+    min-width: 600px;
+    overflow: auto;
+    /*overflow-y: none;*/
+    background-color: #eeeeee;
+}
+
+.md-dialog-content {
+  max-width: 300px;
+}
