--- a/frontend/views/main.html
+++ b/frontend/views/main.html
@@ -43,7 +43,7 @@
 
             <div layout="row" layout-align="center">
                 <md-button class="md-raised md-primary capitalized" ng-click="getBooks()">Pretraži</md-button>
-                <md-button class="md-primary capitalized">Istorija pretrage</md-button>
+                <md-button class="md-primary capitalized" ng-click="showQueryHistory()">Istorija pretrage</md-button>
 
             </div>
         </md-card-content>
@@ -120,7 +120,7 @@
                                 <td>{{ book['210']['c'] }}</td>
                                 <td>{{ book['210']['d'] }}</td>
                                 <td>{{ book['210']['c'] }}</td>
-                                <td><md-button class="md-raised md-primary capitalized" ng-click="showAdvanced($event, book)">Pun prikaz</md-button></td>
+                                <td><md-button class="md-raised md-primary capitalized" ng-click="showFullInformation($event, book)">Pun prikaz</md-button></td>
                             </tr>
                         </tbody>
                     </table>
